2009-02-01  Adam Schreiber  <sadam@clemson.edu>

    * autogen.sh:
    * libcryptui/cryptui.c:
    * configure.in:
    * reference/libcryptui/libcryptui-overrides.txt: (added)
    * reference/libcryptui/version.xml.in: (added)
    * reference/libcryptui/Makefile.am: (added)
    * reference/libcryptui/libcryptui-docs.sgml: (added)
    * reference/Makefile.am:
    * Makefile.am: Add infrastructure to add gtk-doc for libcryptui.  
    Removes block for bug #353061

    * configure.in:
    * src/seahorse-viewer.c: Make sure hkp and ldap are disable and preferences
    is removed from the menu when pgp is disabled.  Fixes bug #551799
    * libseahorse/seahorse-prefs.glade: Change window name to "Preferences"
    Fixes bug #546492
    
2009-01-31  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
    * libegg/eggdesktopfile.c: (added)
    * libegg/eggdesktopfile.h: (added)
    * libegg/eggsmclient.c: (added)
    * libegg/eggsmclient.h:  (added)
    * libegg/eggsmclient-private.h: (added)
    * libegg/eggsmclient-xsmp.c: (added)
    * libegg/Makefile.am: Add files and build magic to start adding smclient to
    daemon
    

2009-01-30  Stef Walter  <stef@memberwebs.com>

	* ssh/seahorse-ssh-key-properties.c: Block trust-toggled signal handler
	when updating the toggle button. Fixes bug #568852
	
2009-01-29  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkr-keyring-commands.c:
	* src/seahorse-key-manager.ui: Add right click item for changing keyring password.

2009-01-29  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-gtkstock.c: Enable proper folder icon for keyrings

2009-01-29  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkr-source.c: Fix problem with hidden gnome-keyring items.

2009-01-28  Stef Walter  <stef@memberwebs.com>

	* libcryptui/crui-*: (removed)
	* libcryptui/Makefile.am:
	* libcryptui/template/*: (removed)
	* libcryptui/tests/*: (removed)
	* libcryptui/tests/files/*: (removed) Remove bits of libcryptui