@@ -1,4 +1,7 @@
 2009-02-01  Adam Schreiber  <sadam@clemson.edu>
+    * daemon/Makefile.am:
+    * daemon/seahorse-daemon.c: Register properly with the session manager.
+    Fixes bug #569636
 
     * autogen.sh:
     * libcryptui/cryptui.c:
